<resources>

    <string name="app_name">VS_siwehrli_AntiTheft</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AntiTheft</string>
    <string name="on_off_text">Arm this phone</string>
    <string name="settings">Settings</string>
    <string name="sensitivity">Sensitivity:</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="timeout">Timeout:</string>
    <string name="timeout_unit"> seconds</string>
    <string name="activate_toogle_button_text">Activate</string>
    <string name="ticker_text">Listening for the theft...</string>
    <string name="notification_comment">Click here to stop me listening</string>
    <string name="inform_friend">Inform a friend:</string>
    <string name="no_friend">phone number</string>
    <string name="inform_message">Somebody have the phone of your friend stolen!!!</string>

</resources>